--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "oir-test-new",
-
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint"
+  }
+}
