--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
-  "name": "oir-test-new",
+  "name": "oir-clean",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && node scripts/build-index.mjs",
+    "build": "next build",
     "start": "next start -p ${PORT:-3000}",
     "lint": "next lint"
+  },
+  "dependencies": {
+    "fast-glob": "3.3.2",
+    "minisearch": "7.1.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.14.9",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.4.5"
   }
 }
