fix: restore landing UI components and status banner

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "postbuild": "node scripts/build-index.mjs",
+    "build": "next build && node scripts/build-index.mjs",
     "start": "next start -p ${PORT:-3000}",
     "lint": "next lint"
   },
